added more detail about SATB1 interface and about evaluation of regularization

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -187,20 +187,21 @@ An analysis of feature importance can be performed by comparing the increase in 
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=.6\textwidth]{img/regularization_spotting.pdf}
-	\caption{Left: Comparison of values in the regularized map against manual complementation spotting assay values. Right: Completeness of the map (in terms of coverage of possible amino acid changes) at different stages of the framework.}
+	\includegraphics[width=.7\textwidth]{img/regularization_eval_ube2i.pdf}
+	\caption{A) Cumulative distribution of changes to the fitness scores on the map as a result of regularization. B) Six variants were that were well measured in DMS-BarSeq but less well measured in DMS-TileSeq. For evaluation, regularization was performed only on the DMS-TileSeq data and compared to the DMS-BarSeq gold standard. Base and tip of arrows indicate pre- and post-regularization values, gray circles indicate the machine learning predictions used. Red targets indicate BarSeq gold standard. C) Comparison of values in the regularized map against manual complementation spotting assay values. D) Completeness of the map (in terms of coverage of possible amino acid changes) at different stages of the framework.}
 	\label{fig:regularization}
 \end{figure}
 
-Finally, in stage 6 of the DMS framework, we wished to address cases in which experimental measurements were available but less confident. We employed a regularization method, combining experimental measurements with machine-learning predicted values after dynamically weighting them according to their respective confidence levels. That means: the less confident a measurement, the stronger the regularization. 
-To evaluate the complete map, we once more applied manual complementation assays to a set of variants that represented the full range of fitness scores.  DMS fitness scores corresponded closely with manual assays (Figure~\ref{fig:regularization}), thus validating our framework. 
+Finally, in stage 6 of the DMS framework, we wished to address cases in which experimental measurements were available but less confident. We employed a regularization method, combining experimental measurements with machine-learning predicted values after dynamically weighting them according to their respective confidence levels. That means: the less confident a measurement, the stronger the regularization. Overall, most values were only adjusted minimally through regularization, with 90\% of values being altered by less than 2.5\% of the score difference between null and wt controls (Figure~\ref{fig:regularization}). This reflects the fact that most values were already of high quality. 
 
+To evaluate the effect on the minority of variants that required stronger regularization, we looked for cases that were of low quality in the DMS-TileSEQ dataset, but well measured in the DMS-BarSeq experiment. This would allow us to treat the DMS-BarSeq values as a gold-standard basis of comparison when performing the regularization procedure only on the DMS-TileSeq dataset. We identified six cases that fulfilled these criteria. In all six cases regularization of DMS-TileSeq resulted in improvement, i.e. adjusted the corresponding values such that they more closely resembled the gold standard (Figure~\ref{fig:regularization}B). However, we found that the changes still very conservative and more drastic weighting towards the machine learning prediction could have improved these cases even more.
 
-%\todo{At this point it would be nice to show off the value of the regularization, but for the unflipped UBE2I map it doesn't improve anything. The flipped maps, especially for TPK1 and CALM1 benefit much more from regularization. It would also be great if we could point to the spotting assay, but we didn't test any poorly measured clones, so we don't have any interesting data there.}
+To evaluate the complete map, we once more applied manual complementation assays to a set of variants that represented the full range of fitness scores.  DMS fitness scores corresponded closely with manual assays (Figure~\ref{fig:regularization})C, with a Spearman correlation of 0.83 between the high-throughput and low-throughput values (a slight improvement of 0.06 compared to the raw, unregularized experimental data).
+
 
 \section{Discussion}
 
-Here we have demonstrated the capabilities of a new improved Deep Mutational Scanning framework that uses functional complementation in yeast to map the impact of mutations on the overall ability of a protein to function. We integrated a machine learning-based imputation and regularization strategy into the deep mutational scanning process, to create the first DMS maps that are complete with respect to high-quality functional impact scores over the full length of a protein.
+Here we have demonstrated the capabilities of a new improved Deep Mutational Scanning framework that uses functional complementation in yeast to map the impact of mutations on the overall ability of a protein to function. We integrated a machine learning-based imputation and regularization strategy into the deep mutational scanning process, to create the first DMS maps that are complete with respect to high-quality functional impact scores over the full length of a protein. 
 
 The two versions of DMS we described, DMS-BarSeq and DMS-TileSeq, each have advantages and limitations. DMS-BarSeq permits study of the combined effects of mutations located at any distance along the clone, and therefore can reveal intramolecular genetic interactions.  Mutant clones produced for DMS-BarSeq are arrayed, sequenced and indexed which can enable follow up investigation of individual variants. DMS-BarSeq can directly compare growth of any clone to null and wild type controls, resulting in an intuitive scoring scheme. However, the cost of arraying and sequencing clones for DMS-BarSeq renders it more costly and labour intensive, even given the efficient KiloSeq strategy. By contrast, the regional sequencing strategy of DMS-TileSeq is substantially more efficient, but can only analyze fitness of those double mutant combinations that fall within the same tile. 
 
