--- a/chapter2.tex
+++ b/chapter2.tex
@@ -112,12 +112,29 @@ Full-length \gene{UBE2I} clones generated for DMS-BarSeq analysis often encoded 
 
 An important factor behind the choice of UBE2I as a testing ground for our DMS framework was the mechanistic complexity of the Sumoylation pathway, in which the central component UBE2I engages in many different protein-protein interactions. Having examined the relative importance of its known interaction interfaces we wished to evaluate the possibility of detecting new interfaces. To this end, we adapted our framework to use a Y2H assay in the selection step.
 
-We explored the set of previously identified Y2H interactions of UBE2I and found its interaction with the Special AT-rich sequence Binding protein SATB1, a sumoylation target, to be the strongest interaction signal. We used DMS-BarSeq to map the effects of UBE2I variants on the interaction and compared the results to those of the complementation assay. Although too few variants in the Y2H screen were measured with high enough confidence to perform reliable imputation, we were able to identify a \todo{find number} variants that specifically disrupted the UBE2I-SATB1 binding without affecting its overall function as measured by the complementation assay. Figure~\ref{fig:y2hVScompl}A highlights these residues on the surface of UBE2I, which may determine the specificity of the UBE2I-SATB1 interaction. Consistent with SATB1's known role as a sumoylation target, the residues are clustered near the known substrate recognition and binding surface. Intriguingly, we also found a number of residues within UBE2I's hydrophobic core, that upon mutation to alternative hydrophobic residues resulted in a disruption of UBE2I-SATB1 binding (Figure~\ref{fig:y2hVScompl}B). The fact that these residues are physically close to the locations of surface residues with similar behaviour may indicate that mutations at these positions could result in subtle shifts of UBE2I's fold that disrupt the SATB1 binding interface without affecting other functions.
+% mut	 compl	 ia
+% C75F	 1.6644	-0.162
+% C75S	 0.9952	 0.493
+% F155L	 0.7357	 0.154
+% F155V	 0.9469	 0.031
+% I45T	 0.7809	 0.254
+% L113I	 0.9961	 0.460
+% L114F	 0.9427	 0.437
+% L81V	 0.9363	 0.374
+% P128S	 1.1586	 0.377
+% P157A	 1.1586	 0.296
+% P73T	 0.7786	 0.143
+% Q126E	 1.1710	 0.277
+% R61P	 0.6716	-0.347
+% V25L	 0.6808	 0.123
+% V25M	 0.7794	 0.090
+
+We explored the set of previously identified Y2H interactions of UBE2I and found its interaction with the Special AT-rich sequence Binding protein SATB1, a sumoylation target, to be the strongest interaction signal. We used DMS-BarSeq to map the effects of UBE2I variants on the interaction and compared the results to those of the complementation assay. Although too few variants in the Y2H screen were measured with high enough confidence to perform reliable imputation, we were able to identify 15 variants that specifically disrupted the UBE2I-SATB1 binding without affecting its overall function as measured by the complementation assay. Interestingly, three amino acid positions (V25, C75 and F155) were represented with multiple variants in this list, highlighting their importance. Figure~\ref{fig:y2hVScompl}A marks the affected residues on the surface of UBE2I, which may determine the specificity of the UBE2I-SATB1 interaction. Consistent with SATB1's known role as a sumoylation target, the residues are clustered near the known substrate recognition and binding surface. Intriguingly, we also found a number of residues within UBE2I's hydrophobic core, that upon mutation to alternative hydrophobic residues resulted in a disruption of UBE2I-SATB1 binding (Figure~\ref{fig:y2hVScompl}B). The fact that these residues are physically close to the locations of surface residues with similar behaviour may indicate that mutations at these positions could result in subtle shifts of UBE2I's fold that disrupt the SATB1 binding interface without affecting other functions.
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{img/satb1_interface.pdf}
-	\caption{Potential interafacial residues for UBE2I's interaction with SATB1. Highlighted residues disrupt Y2H interaction without disrupting overall function as measured by complementation.}
+	\caption{Potential interfacial residues for UBE2I's interaction with SATB1. Highlighted residues disrupt Y2H interaction without disrupting overall function as measured by complementation. The dotted frame in the left panel indicates the plane across which the structure was cut to produce the panel on the right.}
 	\label{fig:y2hVScompl}
 \end{figure}
 
@@ -178,7 +195,7 @@ Having established and evaluated our Deep Mutational Scanning framework on two m
 
 
 
-As was shown above for UBE2I, phylogenetic analysis of SUMO1 similarly showed that variants with ability to complement yeast better than wild-type are likely deleterious in humans. We therefore transformed fitness scores so that such adaptive mutations are considered to be deleterious \todo{expand on this}. The transformed disease gene maps can be seen in Figures \ref{fig:tpk1-map} and \ref{fig:calm+ncs1-maps}.  However, since adaptive substitutions may provide interesting clues about differences between yeast and human cellular contexts, we also provide untransformed versions of each map (see Appendix).
+As was shown above for UBE2I, phylogenetic analysis of SUMO1 similarly showed that variants with ability to complement yeast better than wild-type are likely deleterious in humans. We therefore transformed fitness scores so that such adaptive mutations are considered to be deleterious (see Methods). The transformed disease gene maps can be seen in Figures \ref{fig:tpk1-map} and \ref{fig:calm+ncs1-maps}.  However, since adaptive substitutions may provide interesting clues about differences between yeast and human cellular contexts, we also provide untransformed versions of each map (see Appendix).
 
 %%FIGURE: Map for TPK1/NCS1/CALM1
 
@@ -289,7 +306,7 @@ In total, this study has produced five maps with functional impacts for 15998 po
 
 Given the prospect of personalized and precision medicine, genome sequencing is expected to become increasingly common in everyday medical practice. Current estimates suggest that every human carries an average of 200-300 rare mutations that have never before been seen in the clinic~\cite{the_1000_genomes_project_consortium_global_2015}. This creates a need for fast, reliable interpretation of variant effects. Instead of generating clones and functionally testing variants of unknown significance after they are first observed, DMS technology offers to generate exhaustive maps of functional variation that enable interpretation immediately upon clinical presentation, even for rare and personal variation.
 
-A key requirement for DMS mapping is an \textit{en masse} functional assay that can be applied at the scale of $10^4-10^5$ variant clones, such as complementation in yeast.  However, among $\sim 4000$ disease genes, examination of four systematic screens and curated literature suggests that only $\sim 5\%$ of human disease genes have a yeast complementation assay~\cite{hamza_complementation_2015,kachroo_systematic_2015,sun_extended_2016}. Complementation assays can also be carried out in human cells~\cite{wagenaar_resistance_2014}, and \textit{en masse} transfection is achievable at the required scale \todo{REF}. Based on only three large-scale CRISPR studies~\cite{hart_high-resolution_2015,blomen_gene_2015,wang_genetic_2014}, cellular growth phenotypes have already been observed in at least one cell line for 29\% of human disease genes.  Beyond complementation, sub-functional assays, e.g. of protein interaction, can not only reveal variation that impacts the specifically assayed sub-function but also folding/stability mutations that ablate overall function. In a recent study, approximately two thirds of disease-causing variants were found to impact at least one protein interaction~\cite{sahni_widespread_2015}. Although only a minority of human protein interactions have been mapped~\cite{rolland_proteome-scale_2014}, already 40\% of human genes have at least one interaction partner detectable by yeast two-hybrid assay in a recent screen~\cite{rolland_proteome-scale_2014}. Taking the union of available assays, we estimate that 57\% of known disease-associated genes already have an assay potentially amenable to DMS. Emerging protein interaction data and CRISPR screens suggests that the proportion of DMS-accessible disease genes will continue to rise. 
+A key requirement for DMS mapping is an \textit{en masse} functional assay that can be applied at the scale of $10^4-10^5$ variant clones, such as complementation in yeast.  However, among $\sim 4000$ disease genes, examination of four systematic screens and curated literature suggests that only $\sim 5\%$ of human disease genes have a yeast complementation assay~\cite{hamza_complementation_2015,kachroo_systematic_2015,sun_extended_2016}. Complementation assays can also be carried out in human cells~\cite{wagenaar_resistance_2014}, and \textit{en masse} transfection is achievable at the required scale~\cite{blomen_gene_2015}. Based on only three large-scale CRISPR studies~\cite{hart_high-resolution_2015,blomen_gene_2015,wang_genetic_2014}, cellular growth phenotypes have already been observed in at least one cell line for 29\% of human disease genes.  Beyond complementation, sub-functional assays, e.g. of protein interaction, can not only reveal variation that impacts the specifically assayed sub-function but also folding/stability mutations that ablate overall function. In a recent study, approximately two thirds of disease-causing variants were found to impact at least one protein interaction~\cite{sahni_widespread_2015}. Although only a minority of human protein interactions have been mapped~\cite{rolland_proteome-scale_2014}, already 40\% of human genes have at least one interaction partner detectable by yeast two-hybrid assay in a recent screen~\cite{rolland_proteome-scale_2014}. Taking the union of available assays, we estimate that 57\% of known disease-associated genes already have an assay potentially amenable to DMS. Emerging protein interaction data and CRISPR screens suggests that the proportion of DMS-accessible disease genes will continue to rise. 
 
 \section{Methods}
 
@@ -319,6 +336,9 @@ In the second model, $$\pi_{r,a} = \min(f_{r,a}, f_{r,\text{wt}}),$$ where $f_{r
 Finally, in the third model, $$\pi_{r,a} = \begin{cases} f_{r,a} &  \text{if}~ f_{r,a} \le f_{r,\text{wt}} \\ \frac{1}{f_{r,a}} & \text{otherwise} \end{cases}. $$ 
 
 Each of these models were fit to the set of Ensembl homologues with at least 75\% sequence identity to the human protein. 
+
+\subsection{Transformation of maps for human phenotypes}
+Having established the third substitution model to provide the best fit for evolutionary preference (see above), we applied transformation function underlying the model to the complementation data for each tested gene and repeated the imputation and regularization steps described in the previous chapter on the transformed data.
 
 \subsection{Intragenic epistasis analysis} Genetic interactions were determined based on a previously described multiplicative model~\cite{phillips_language_1998,onge_systematic_2007}, that expects double mutant fitness to conform to the product of single mutant fitness effects in the absence of interaction between the two. Under this model, the strength of genetic interaction is defined as $$\varepsilon_{ij} = f_i \cdot f_j - f_{ij},$$ where $f_i$ and $f_j$ represent single mutant fitness and $f_{ij}$ represents double mutant fitness scores. To test for deviation from this model, all cases where double mutant and both corresponding single mutants were known in the data were extracted. The standard deviation for the expected double mutant fitness $f_i \cdot f_j$ was estimated using
 $$ \mathbb{V}(XY) = \mathbb{E}(X^2Y^2)-(\mathbb{E}(XY))^2=\mathbb{V}(X)\mathbb{V}(Y) + \mathbb{V}(X)(\mathbb{E}(Y))^2+\mathbb{V}(Y)(\mathbb{E}(X))^2 $$ 
