--- a/thesis.bib
+++ b/thesis.bib
@@ -2671,3 +2671,21 @@ PML and several other proteins localizing in PML-nuclear bodies (PML-NB) contai
 	keywords = {Adolescent, Adult, Amino Acid Sequence, Arrhythmias, Cardiac, Calcium Channels, Calmodulin, Child, Child, Preschool, Chromosomes, Human, Pair 14, Death, Sudden, Cardiac, Female, Genetic Predisposition to Disease, Heterozygote, Humans, Male, Molecular Sequence Data, Mutation, Missense, Ryanodine Receptor Calcium Release Channel, Syncope, Tachycardia, Ventricular, Young Adult},
 	pages = {703--712}
 }
+
+@article{tan_sumo_2008,
+	title = {{SUMO} conjugation to the matrix attachment region-binding protein, special {AT}-rich sequence-binding protein-1 ({SATB}1), targets {SATB}1 to promyelocytic nuclear bodies where it undergoes caspase cleavage},
+	volume = {283},
+	issn = {0021-9258},
+	doi = {10.1074/jbc.M800512200},
+	abstract = {SATB1 (special AT-rich sequence-binding protein-1) provides a key link between DNA loop organization, chromatin modification/remodeling, and association of transcription factors at matrix attachment regions (MARs). To investigate the role of SATB1 in cellular events, we performed a yeast two-hybrid screen that identified SUMO-1, Ubc9, and protein inhibitor of activated STAT (PIAS) family members as SATB1 interaction partners. These proteins, working in concert, enhanced SUMO conjugation to lysine-744 of SATB1. Overexpression of SUMO or PIAS in Jurkat cells, which express high levels of endogenous SATB1, exhibited enhanced caspase cleavage of this MAR-associating protein. Sumoylation-deficient SATB1 (SATB1(K744R)) failed to display the characteristic caspase cleavage pattern; however, fusion of SUMO in-frame to SATB1(K744R) restored cleavage. A SUMO-independent interaction of inactive caspase-6 and SATB1 was noted. A subset of total cellular SATB1 localized into promyelocytic leukemia nuclear bodies where enhanced SATB1 cleavage was detected subsequent to caspase activation. These results reveal a novel sumoylation-directed caspase cleavage of this key regulatory molecule. The role of regulated proteolysis of SATB1 may be to control transcription in immune cells during normal cell functions or to assist in efficient and rapid clearance of nonfunctional or potentially damaging immune cells.},
+	language = {eng},
+	number = {26},
+	journal = {The Journal of Biological Chemistry},
+	author = {Tan, Joseph-Anthony T. and Sun, Yujie and Song, Jing and Chen, Yuan and Krontiris, Theodore G. and Durrin, Linda K.},
+	month = jun,
+	year = {2008},
+	pmid = {18408014},
+	pmcid = {PMC2440605},
+	keywords = {Apoptosis, Binding Sites, Cell Nucleus, Gene Expression Regulation, Enzymologic, Gene Expression Regulation, Neoplastic, HeLa Cells, Humans, Jurkat Cells, K562 Cells, Matrix Attachment Region Binding Proteins, Microscopy, Confocal, Models, Biological, SUMO-1 Protein, Transcription, Genetic, Two-Hybrid System Techniques},
+	pages = {18124--18134}
+}
