more first person and added p-values to interface analysis

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -18,7 +18,7 @@ The work described below represents a team effort including many members of the 
 
 \section{Results}
 
-When carrying out deep mutational scans of protein sequences yielding comprehensive atlases of sequence-function relationships, it is useful to describe the process in distinct stages. The framework described in the following sections can be broken down into six such stages (see Figure~\ref{fig:framework}): 1) mutagenesis; 2) generation of a clone library; 3) selection for clones encoding a functional protein; 4) read-out of the selection results and analysis to produce an initial sequence-function map; 5) computational analysis to impute missing values; and 6) computational analysis to refine measured values based on imputation models. The framework incorporates previously-described deep mutational scanning concepts as well as new experimental components (e.g. our imputation and regularization strategy) and analytic methods. In particular, the last two stages enabling a complete and accurate DMS map have not been applied in any published DMS study.
+When carrying out deep mutational scans of protein sequences yielding comprehensive atlases of sequence-function relationships, it is useful to describe the process in distinct stages. The framework described in the following sections can be broken down into six such stages (see Figure~\ref{fig:framework}): 1) mutagenesis; 2) generation of a clone library; 3) selection for clones encoding a functional protein; 4) read-out of the selection results and analysis to produce an initial sequence-function map; 5) computational analysis to impute missing values; and 6) computational analysis to refine measured values based on imputation models. The framework incorporates previously-described deep mutational scanning concepts as well as new experimental components (e.g. an imputation and regularization strategy) and analytic methods. In particular, the last two stages enabling a complete and accurate DMS map have not been applied in any published DMS study.
 
 In the following sections, I will first describe a version of the framework called DMS-BarSeq and apply it to the human SUMO conjugase \gene{UBE2I}, exhaustively measuring the ability of protein variants to function. DMS-BarSeq provides direct variant function measurements and the ability to examine higher-order multi-mutant effects. An alternative version of the framework, DMS-TileSeq, generally captures only single-variant effects, but is less resource-intensive. After comparing DMS-TileSeq and DMS-BarSeq, the resulting maps are combined, missing data points are computationally inferred and map quality refined.
 
